--- a/style.css
+++ b/style.css
@@ -98,7 +98,10 @@ body {
   font-weight: 600;
   font-size: 1rem;
   margin-top: 1rem;
-  margin-bottom: 0.4rem;
+  margin-bottom: 1rem;
+}
+.resumo-text ul li {
+  margin-top: 0.5rem;
 }
 
 .resumo-text ul li a {
@@ -107,13 +110,13 @@ body {
 
 .resumo .perfil img {
   margin: 0 auto;
-  width: 97%;
+  width: 90%;
   border-radius: 16px;
   transition: all 0.3s ease;
 }
 
 .perfil img:hover {
-  width: 99%;
+  width: 95%;
 }
 
 /*PROJECT*/
@@ -140,12 +143,14 @@ body {
 
 .cards-projects .card {
   width: 200px;
+  min-height: 280px;
   background-color: #fff;
   border-radius: 16px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  flex: 0 1 250px;
+  flex: 0 1 200px;
   margin-bottom: 1rem;
   transition: all 0.3s ease;
+  position: relative;
 }
 
 .card:hover {
@@ -159,6 +164,7 @@ body {
 .card .bg-card img {
   width: 100%;
   border-radius: 16px 16px 0px 0px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .card .card-content {
@@ -185,6 +191,8 @@ body {
   margin-left: 0.4rem;
   text-align: left;
   color: #252f3f;
+  position: absolute;
+  bottom: 0;
 }
 
 .btn a {
@@ -192,8 +200,125 @@ body {
 }
 
 /*RESPONSIVO*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 678px) {
   .container {
     width: 100%;
+  }
+  /*RESUMO*/
+
+  .resumo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 0.5rem;
+    padding: 5%;
+    color: #252f3f;
+  }
+
+  .resumo .resumo-text {
+    margin-right: 1%;
+    width: 100%;
+  }
+
+  .resumo-text ul li {
+    display: inline;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+    color: #252f3f;
+  }
+
+  .resumo .perfil {
+    order: -1;
+    width: 100%;
+  }
+
+  .resumo .perfil img {
+    margin: 0 auto;
+    width: 40%;
+  }
+
+  .perfil img:hover {
+    width: 50%;
+  }
+
+  /*PROJECT*/
+  .projects {
+    width: 100%;
+    color: #252f3f;
+  }
+
+  .projects .cards-projects {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .cards-projects .card {
+    flex: 0 1 300px;
+  }
+
+  .card:hover {
+    border-radius: 16px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    flex: 0 1 325px;
+    margin-bottom: 1.2rem;
+    margin-top: -5px;
+  }
+}
+
+@media screen and (min-width: 679px) and (max-width: 959px) {
+  .container {
+    width: 100%;
+  }
+  /*RESUMO*/
+
+  .resumo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 0.5rem;
+    padding: 5%;
+    color: #252f3f;
+  }
+
+  .resumo .resumo-text {
+    margin-right: 1%;
+    width: 99%;
+  }
+
+  .resumo .perfil {
+    order: -1;
+    width: 40%;
+  }
+
+  .resumo .perfil img {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  .perfil img:hover {
+    width: 100%;
+  }
+
+  /*PROJECT*/
+  .projects {
+    width: 100%;
+    color: #252f3f;
+  }
+
+  .projects .cards-projects {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .cards-projects .card {
+    flex: 0 1 300px;
+  }
+
+  .card:hover {
+    border-radius: 16px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    flex: 0 1 325px;
+    margin-bottom: 1.2rem;
+    margin-top: -5px;
   }
 }
