--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ img {
 }
 
 body {
-  maxs-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -196,6 +197,26 @@ body {
 
 .btn a {
   color: #252f3f;
+}
+
+.footer {
+  width: 70%;
+  text-align: center;
+  padding: 1%;
+  color: #374151;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.footer p i {
+  color: red;
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  10% {
+    transform: scale(1.1);
+  }
 }
 
 /*RESPONSIVO*/
