--- a/style.css
+++ b/style.css
@@ -112,12 +112,13 @@ body {
 .resumo .perfil img {
   margin: 0 auto;
   width: 90%;
-  border-radius: 16px;
+  border-radius: 50%;
   transition: all 0.3s ease;
 }
 
 .perfil img:hover {
   width: 95%;
+  border-radius: 16px;
 }
 
 /*PROJECT*/
